--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.9",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/fs-extra": "^8.1.0",
     "@types/js-yaml": "^3.12.2",
     "@types/mocha": "^7.0.1",
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^6.6.0",
     "mocha": "^7.0.0",
     "nock": "^12.0.3",
