--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@w3f/downloader": "^0.2.0",
     "@w3f/logger": "^0.3.0",
     "axios": "^0.19.2",
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.0",
+    "ospath": "^1.2.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.9",
@@ -32,6 +33,7 @@
     "@types/js-yaml": "^3.12.2",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.11.1",
+    "@types/sinon": "^9.0.0",
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
@@ -40,7 +42,8 @@
     "eslint": "^6.6.0",
     "mocha": "^7.0.0",
     "nock": "^12.0.3",
-    "tmp": "^0.1.0",
+    "sinon": "^9.0.2",
+    "tmp": "^0.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
   }
